--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -8,11 +8,18 @@
 		<version>3.4.7</version>
 		<relativePath/>
 	</parent>
-	<groupId>com.api</groupId>
-	<artifactId>microservice</artifactId>
+	<groupId>com.ecommerce.campus</groupId>
+	<artifactId>microservice-parent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
 	<name>microservice</name>
-	<description>Microservice -- sample</description>
+	<description>Microservice parent to manage all the child microservices</description>
+	<!-- ========================================= -->
+	<!-- MODULE MICROSERVICES      -->
+	<!-- ========================================= -->
+	<modules>
+		<module>common</module>
+	</modules>
 
 	<properties>
 		<java.version>21</java.version>
@@ -192,6 +199,15 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- ========================================= -->
+		<!-- TEST DATABASE                           -->
+		<!-- ========================================= -->
+		<!-- H2 Database for testing -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -203,7 +219,45 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>io.jsonwebtoken</groupId>
+				<artifactId>jjwt-api</artifactId>
+				<version>${jjwt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.jsonwebtoken</groupId>
+				<artifactId>jjwt-impl</artifactId>
+				<version>${jjwt.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.jsonwebtoken</groupId>
+				<artifactId>jjwt-jackson</artifactId>
+				<version>${jjwt.version}</version>
+			</dependency>
+			<!-- MAP STRUCTURE-->
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>1.6.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct-processor</artifactId>
+				<version>1.6.0</version>
+			</dependency>
+			<!--ARCHITECTURE TEST FOR JAVA-->
+			<dependency>
+				<groupId>com.tngtech.archunit</groupId>
+				<artifactId>archunit-junit5</artifactId>
+				<version>1.3.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-collections4</artifactId>
+				<version>4.4</version>
+			</dependency>
 		</dependencies>
+
 	</dependencyManagement>
 
 	<build>
