--- a/microservices/common/pom.xml
+++ b/microservices/common/pom.xml
@@ -68,10 +68,10 @@
 		<!-- ========================================= -->
 
 		<!-- Apache Commons Lang -->
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.commons</groupId>-->
+<!--			<artifactId>commons-lang3</artifactId>-->
+<!--		</dependency>-->
 
 		<!-- Apache Commons Collections -->
 		<dependency>
