creating .env.shared

--- a/microservices/auth-service/src/main/resources/application.yml
+++ b/microservices/auth-service/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: auth-service
   config:
-    import: file:.env.local
+    import: file:.env
 
 server:
   port: ${PORT}
