--- a/microservices/auth-service/Dockerfile
+++ b/microservices/auth-service/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:21-jdk-slim
 
+#Metadata
 LABEL maintainer="Campus E-commerce - A team"
 LABEL version="0.0.1-SNAPSHOT"
 
@@ -13,13 +14,6 @@ COPY target/auth-service-0.0.1-SNAPSHOT.jar app.jar
 RUN groupadd -r appuser && useradd -r -g appuser appuser
 RUN chown -R appuser:appuser /app
 USER appuser
-
-# Expose port, metadata
-EXPOSE 8081
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
-  CMD curl -f http://localhost:8081/actuator/health || exit 1
 
 # Run application
 ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-jar", "app.jar"]
