--- a/microservices/auth-service/src/main/resources/application.yml
+++ b/microservices/auth-service/src/main/resources/application.yml
@@ -2,15 +2,17 @@ spring:
   application:
     name: auth-service
   config:
-    import: file:.env
+    import:
+      - file:.env.shared
+      - file:.env
 
 server:
   port: ${PORT}
 
   datasource:
     url: jdbc:sqlserver://${DB_HOST}:${DB_PORT};databaseName=${DB_NAME};encrypt=${DB_ENCRYPT};trustServerCertificate=${DB_TRUST_CERT}
-    username: ${DB_USERNAME}  # No default - MUST be provided
-    password: ${DB_PASSWORD}  # No default - MUST be provided
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
     hikari:
       maximum-pool-size: ${DB_POOL_SIZE}
@@ -36,7 +38,7 @@ server:
   redis:
     host: ${REDIS_HOST}
     port: ${REDIS_PORT}
-    password: ${REDIS_PASSWORD:}
+    password: ${REDIS_PASSWORD}
     timeout: ${REDIS_TIMEOUT}
     lettuce:
       pool:
@@ -67,7 +69,9 @@ management:
   endpoint:
     health:
       show-details: ${ACTUATOR_SHOW_DETAILS}
-
+  health:
+    readiness:
+      enabled: ${REDIS_READINESS}
 logging:
   level:
     com.ecommerce.campus.auth-service: ${LOG_LEVEL_APP}
