--- a/microservices/docker-compose.yaml
+++ b/microservices/docker-compose.yaml
@@ -1,6 +1,25 @@
 version: '3.8'
 
 services:
+
+  #Api Gateway
+  api-gateway:
+    build:
+      context: ./api-gateway
+      dockerfile: Dockerfile
+    container_name: campus-api-gateway
+    env_file:
+      - ../.env.shared
+      - ./api-gateway/.env
+    ports:
+      - "${PORT}:${PORT}"
+    depends_on:
+      - auth-service
+      - consul
+    networks:
+      - campus-network
+    restart: unless-stopped
+
   # Auth Service
   auth-service:
     build:
@@ -65,6 +84,7 @@ services:
     networks:
       - campus-network
     restart: unless-stopped
+
 #Declares the volume names
 volumes:
   sqlserver_data:
