--- a/microservices/api-gateway/src/main/resources/application.yml
+++ b/microservices/api-gateway/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
           lower-case-service-id: ${GATEWAY_LOWERCASE}
 
     consul:
-      host: ${CONSUL_HOST}
+      host: consul
       port: ${CONSUL_PORT}
       discovery:
         enabled: ${CONSUL_ENABLED}
