--- a/microservices/auth-service/pom.xml
+++ b/microservices/auth-service/pom.xml
@@ -28,6 +28,18 @@
             <artifactId>mapstruct-processor</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!--Liquibase Migration-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+
+        </dependency>
+
+        <!-- Individual Test containers modules -->
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -55,6 +67,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+<!--            <plugin>-->
+<!--                <groupId>org.liquibase</groupId>-->
+<!--                <artifactId>liquibase-maven-plugin</artifactId>-->
+<!--                <version>4.29.2</version>-->
+<!--                <configuration>-->
+<!--                    <changeLogFile>src/main/resources/liquibase-changelog/db_auth-changelog.xml</changeLogFile>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 </project>
