--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -97,13 +97,9 @@
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 		<!-- ========================================= -->
-		<!-- DATABASE & MIGRATION                    -->
+		<!-- DATABASE                 -->
 		<!-- ========================================= -->
-		<!--Liquibase Migration-->
-		<dependency>
-			<groupId>org.liquibase</groupId>
-			<artifactId>liquibase-core</artifactId>
-		</dependency>
+
 		<!--MS SQL Server Driver-->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
@@ -224,13 +220,12 @@
 			<version>7.11.0</version>
 			<scope>compile</scope>
 		</dependency>
-
-		<!-- Individual Test containers modules -->
+		<!-- To fix vulnerabilities -->
 		<dependency>
-			<groupId>org.testcontainers</groupId>
-			<artifactId>junit-jupiter</artifactId>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.26.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mssqlserver</artifactId>
@@ -300,6 +295,12 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.18.0</version>
+			</dependency>
+
 		</dependencies>
 
 	</dependencyManagement>
