--- a/microservices/auth-service/src/main/resources/application.yml
+++ b/microservices/auth-service/src/main/resources/application.yml
@@ -17,6 +17,18 @@ spring:
       minimum-idle: ${DB_MIN_IDLE}
       connection-timeout: ${DB_TIMEOUT}
 
+  #Redis
+  redis:
+    host: redis
+    port: 6379
+    timeout: ${REDIS_TIMEOUT}
+    lettuce:
+      pool:
+        max-active: ${REDIS_POOL_MAX}
+        max-idle: ${REDIS_POOL_IDLE}
+        min-idle: ${REDIS_POOL_MIN}
+
+
 server:
   port: ${PORT_AUTH}
 
@@ -50,22 +62,9 @@ jwt:
         order_inserts: true
     show-sql: ${JPA_SHOW_SQL}
 
-
-  redis:
-    host: ${REDIS_HOST}
-    port: ${REDIS_PORT}
-    username: ${REDIS_USERNAME}
-    password: ${REDIS_PASSWORD}
-    timeout: ${REDIS_TIMEOUT}
-    lettuce:
-      pool:
-        max-active: ${REDIS_POOL_MAX}
-        max-idle: ${REDIS_POOL_IDLE}
-        min-idle: ${REDIS_POOL_MIN}
-
   cloud:
     consul:
-      host: ${CONSUL_HOST}
+      host: consul
       port: ${CONSUL_PORT}
       discovery:
         enabled: ${CONSUL_ENABLED}
@@ -75,7 +74,7 @@ jwt:
         prefer-ip-address: ${PREFER_IP_ADDRESS}
         register: true
       config:
-        enabled: false
+        enabled: true
 
 #Actuator
 management:
@@ -93,13 +92,16 @@ management:
       show-details: ${ACTUATOR_SHOW_DETAILS}
   health:
     readiness:
-      enabled: ${REDIS_READINESS}
+      enabled: true
+    redis:
+      enabled: true
 logging:
   level:
     com.ecommerce.campus.auth-service: DEBUG
-    org.springframework.security: WARN
-    org.hibernate.SQL: WARN
+    org.springframework.security: DEBUG
+    org.springframework.redis: DEBUG
     org.springframework.boot.context.config: DEBUG
+    org.hibernate.SQL: WARN
     liquibase: DEBUG
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
