--- a/microservices/docker-compose.yaml
+++ b/microservices/docker-compose.yaml
@@ -45,8 +45,14 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       # Redis
-      - REDIS_HOST=${REDIS_HOST}
-      - REDIS_PORT=${REDIS_PORT}
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
+      - SPRING_REDIS_DATABASE=0
+      - SPRING_REDIS_TIMEOUT=2000ms
+      - SPRING_REDIS_LETTUCE_POOL_MAX_ACTIVE=8
+      - SPRING_REDIS_LETTUCE_POOL_MAX_IDLE=8
+      - SPRING_REDIS_LETTUCE_POOL_MIN_IDLE=0
+      - SPRING_REDIS_LETTUCE_POOL_MAX_WAIT=-1ms
       # Consul
       - CONSUL_HOST=${CONSUL_HOST}
       - CONSUL_PORT=${CONSUL_PORT}
@@ -60,7 +66,6 @@ services:
       - SPRING_PROFILES_ACTIVE=dev
       - LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_BOOT_AUTOCONFIGURE=DEBUG
       - SPRING_MAIN_BANNER_MODE=off
-
 
     networks:
       - campus-network
@@ -109,7 +114,7 @@ services:
   # Redis for caching
   redis:
     image: redis:7-alpine
-    container_name: ${REDIS_HOST}
+    container_name: redis
     ports:
       - "${REDIS_PORT}:${REDIS_PORT}"
     networks:
@@ -119,7 +124,7 @@ services:
   #Consul for health check
   consul:
     image: consul:1.15
-    container_name: ${CONSUL_HOST}
+    container_name: consul
     ports:
       - "${CONSUL_PORT}:${CONSUL_PORT}" # Web UI / HTTP API
     networks:
