--- a/microservices/docker-compose.yaml
+++ b/microservices/docker-compose.yaml
@@ -45,14 +45,14 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       # Redis
-      - SPRING_REDIS_HOST=redis
-      - SPRING_REDIS_PORT=6379
-      - SPRING_REDIS_DATABASE=0
-      - SPRING_REDIS_TIMEOUT=2000ms
-      - SPRING_REDIS_LETTUCE_POOL_MAX_ACTIVE=8
-      - SPRING_REDIS_LETTUCE_POOL_MAX_IDLE=8
-      - SPRING_REDIS_LETTUCE_POOL_MIN_IDLE=0
-      - SPRING_REDIS_LETTUCE_POOL_MAX_WAIT=-1ms
+      - SPRING_REDIS_HOST=${REDIS_HOST}
+      - SPRING_REDIS_PORT=${REDIS_PORT}
+      - SPRING_REDIS_DATABASE=${SPRING_REDIS_DATABASE}
+      - SPRING_REDIS_TIMEOUT=${REDIS_TIMEOUT}
+      - SPRING_REDIS_LETTUCE_POOL_MAX_ACTIVE=${REDIS_POOL_MAX_ACTIVE}
+      - SPRING_REDIS_LETTUCE_POOL_MAX_IDLE=${REDIS_POOL_MAX_IDLE}
+      - SPRING_REDIS_LETTUCE_POOL_MIN_IDLE=${REDIS_POOL_MIN_IDLE}
+      - SPRING_REDIS_LETTUCE_POOL_MAX_WAIT=${SPRING_REDIS_LETTUCE_POOL_MAX_WAIT}
       # Consul
       - CONSUL_HOST=${CONSUL_HOST}
       - CONSUL_PORT=${CONSUL_PORT}
@@ -114,7 +114,7 @@ services:
   # Redis for caching
   redis:
     image: redis:7-alpine
-    container_name: redis
+    container_name: ${REDIS_HOST}
     ports:
       - "${REDIS_PORT}:${REDIS_PORT}"
     networks:
