--- a/microservices/auth-service/src/main/resources/bootstrap.yml
+++ b/microservices/auth-service/src/main/resources/bootstrap.yml
@@ -3,16 +3,16 @@ spring:
     name: auth-service
 
   redis:
-    host: ${SPRING_REDIS_HOST:redis}
-    port: ${SPRING_REDIS_PORT:6379}
-    database: ${SPRING_REDIS_DATABASE:0}
-    timeout: ${SPRING_REDIS_TIMEOUT:2000ms}
+    host: ${SPRING_REDIS_HOST}
+    port: ${SPRING_REDIS_PORT}
+    database: ${SPRING_REDIS_DATABASE}
+    timeout: ${SPRING_REDIS_TIMEOUT}
     lettuce:
       pool:
-        max-active: ${SPRING_REDIS_LETTUCE_POOL_MAX_ACTIVE:8}
-        max-idle: ${SPRING_REDIS_LETTUCE_POOL_MAX_IDLE:8}
-        min-idle: ${SPRING_REDIS_LETTUCE_POOL_MIN_IDLE:0}
-        max-wait: ${SPRING_REDIS_LETTUCE_POOL_MAX_WAIT:-1ms}
+        max-active: ${SPRING_REDIS_LETTUCE_POOL_MAX_ACTIVE}
+        max-idle: ${SPRING_REDIS_LETTUCE_POOL_MAX_IDLE}
+        min-idle: ${SPRING_REDIS_LETTUCE_POOL_MIN_IDLE}
+        max-wait: ${SPRING_REDIS_LETTUCE_POOL_MAX_WAIT}
 
   # Keep Consul config disabled (as you have it)
   cloud:
