--- a/microservices/api-gateway/src/main/resources/application.yml
+++ b/microservices/api-gateway/src/main/resources/application.yml
@@ -2,14 +2,7 @@ spring:
   application:
     name: api-gateway
   cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: ${GATEWAY_ENABLED}
-          lower-case-service-id: ${GATEWAY_LOWERCASE}
     consul:
-      host: ${CONSUL_HOST}
-      port: ${CONSUL_PORT}
       discovery:
         enabled: ${CONSUL_ENABLED}
         service-name: ${spring.application.name}
@@ -17,6 +10,13 @@ spring:
         health-check-path: ${CONSUL_CHECK_PATH}
         prefer-ip-address: ${PREFER_IP_ADDRESS}
         register: false
+      config:
+        enabled: false
+    gateway:
+      discovery:
+        locator:
+          enabled: ${GATEWAY_ENABLED}
+          lower-case-service-id: ${GATEWAY_LOWERCASE}
 
 server:
   port: ${PORT_GATEWAY}
@@ -25,15 +25,12 @@ management:
   endpoints:
     web:
       exposure:
-        include: ${ACTUATOR_ENDPOINTS}
+        include: health,info
   endpoint:
     health:
-      show-details: ${ACTUATOR_SHOW_DETAILS}
+      show-details: always
 
 logging:
   level:
-    com.ecommerce.campus.api-gateway: DEBUG
-    org.springframework.security: DEBUG
-    org.hibernate.SQL: DEBUG
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+    com.ecommerce.campus.api-gateway: INFO
+    org.springframework.cloud.consul: DEBUG
