--- a/microservices/auth-service/pom.xml
+++ b/microservices/auth-service/pom.xml
@@ -18,6 +18,11 @@
     <dependencies>
         <!-- Common module -->
 
+        <!--Spring Web-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- MapStruct for DTO mapping -->
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -32,7 +37,6 @@
         <dependency>
             <groupId>org.liquibase</groupId>
             <artifactId>liquibase-core</artifactId>
-
         </dependency>
 
         <!-- Individual Test containers modules -->
@@ -40,7 +44,21 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
         </dependency>
+        <!--Spring Data JPA (ORM)-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- ========================================= -->
+        <!-- DATABASE                 -->
+        <!-- ========================================= -->
 
+        <!--MS SQL Server Driver-->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -67,14 +85,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-<!--            <plugin>-->
-<!--                <groupId>org.liquibase</groupId>-->
-<!--                <artifactId>liquibase-maven-plugin</artifactId>-->
-<!--                <version>4.29.2</version>-->
-<!--                <configuration>-->
-<!--                    <changeLogFile>src/main/resources/liquibase-changelog/db_auth-changelog.xml</changeLogFile>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
+
         </plugins>
     </build>
 </project>
