--- a/microservices/docker-compose.yaml
+++ b/microservices/docker-compose.yaml
@@ -1,5 +1,3 @@
-#version: '3.8'
-
 services:
 
   #Api Gateway
@@ -138,4 +136,5 @@ volumes:
 
 networks:
   campus-network:
+    name: campus-network
     driver: bridge
